externals/mtime/src/mtime_c_bindings.f90

      character(c_char), dimension(*) :: firstDate
      character(c_char), dimension(*) :: lastDate
      character(c_char), dimension(*) :: interval
      character(c_char), dimension(*) :: offset
    end function my_newevent
    !
    function my_neweventwithdatatypes(name, referenceDate, firstdate, lastDate, interval, offset) &
         &                           result(c_pointer) bind(c, name='newEventWithDataType')
      import :: c_char, c_ptr
      type(c_ptr) :: c_pointer
      character(c_char), dimension(*) :: name
      type(c_ptr), value :: referenceDate
      type(c_ptr), value :: firstDate
      type(c_ptr), value :: lastDate
      type(c_ptr), value :: interval
      type(c_ptr), value :: offset
    end function my_neweventwithdatatypes
    !
    subroutine my_deallocateevent(ev) bind(c,name='deallocateEvent')
      import :: c_ptr
      type(c_ptr), value :: ev
    end subroutine my_deallocateevent
    !
    function my_constructandcopyevent(my_event) result(event_copy) bind(c, name='constructAndCopyEvent')
      import :: c_ptr
      type(c_ptr) :: event_copy
      type(c_ptr), value :: my_event
    end function my_constructandcopyevent
    !
    function my_eventtostring(my_event, string) result(string_ptr) bind(c, name='eventToString')
      import :: c_ptr, c_char
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: my_event
      character(c_char), dimension(*) :: string
    end function my_eventtostring
    !
    function my_isCurrentEventActive(my_event, my_datetime, plus_slack, minus_slack) &
         &                      result(ret) bind(c, name='isCurrentEventActive')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      type(c_ptr), value :: my_datetime
      type(c_ptr), value :: plus_slack
      type(c_ptr), value :: minus_slack
      logical(c_bool) :: ret
    end function my_isCurrentEventActive
    !
    function my_iseventnextinnextday(my_event) result(ret) bind(c, name='iseventNextInNextDay')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_iseventnextinnextday
    !
    function my_iseventnextinnextmonth(my_event) result(ret) bind(c, name='iseventNextInNextMonth')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_iseventnextinnextmonth
    !
    function my_iseventnextinnextyear(my_event) result(ret) bind(c, name='iseventNextInNextYear')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_iseventnextinnextyear
    !
    function my_gettriggernexteventatdatetime(my_event,my_currentdatetime,my_datetime) result(c_pointer) &
         & bind(c, name='getTriggerNextEventAtDateTime')
      import :: c_ptr
      type(c_ptr) :: c_pointer
      type(c_ptr), value :: my_event
      type(c_ptr), value :: my_currentdatetime
      type(c_ptr), value :: my_datetime
    end function my_gettriggernexteventatdatetime
    !
    function my_gettriggeredpreviouseventatdatetime(my_event,my_datetime) result(c_pointer) &
         & bind(c, name='getTriggeredPreviousEventAtDateTime')
      import :: c_ptr
      type(c_ptr) :: c_pointer
      type(c_ptr), value :: my_event
      type(c_ptr), value :: my_datetime
    end function my_gettriggeredpreviouseventatdatetime
    !
    function my_geteventname(my_event, string) result(c_pointer) bind(c, name='getEventName')
      import :: c_ptr, c_char
      type(c_ptr) :: c_pointer
      type(c_ptr), value :: my_event
      character(c_char), dimension(*) :: string
    end function my_geteventname
    !
    function my_getnexteventisfirst(my_event) result(ret) bind(c, name='getNextEventIsFirst')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_getnexteventisfirst
    !
    function my_geteventisfirstinday(my_event) result(ret) bind(c, name='getEventisFirstInDay')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_geteventisfirstinday
    !
    function my_geteventisfirstinmonth(my_event) result(ret) bind(c, name='getEventisFirstInMonth')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_geteventisfirstinmonth
    !
    function my_geteventisfirstinyear(my_event) result(ret) bind(c, name='getEventisFirstInYear')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_geteventisfirstinyear
    !
    function my_geteventislastinday(my_event) result(ret) bind(c, name='getEventisLastInDay')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_geteventislastinday
    !
    function my_geteventislastinmonth(my_event) result(ret) bind(c, name='getEventisLastInMonth')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_geteventislastinmonth
    !
    function my_geteventislastinyear(my_event) result(ret) bind(c, name='getEventisLastInYear')
      import :: c_bool, c_ptr
      type(c_ptr), value :: my_event
      logical(c_bool) :: ret
    end function my_geteventislastinyear
    !
  end interface
  !
  interface
    !
    function my_neweventgroup(name) result(c_pointer) bind(c, name='newEventGroup')
      import :: c_char, c_ptr
      type(c_ptr) :: c_pointer
      character(c_char), dimension(*) :: name
    end function my_neweventgroup
    !
    subroutine my_deallocateeventgroup(evgrp) bind(c,name='deallocateEventGroup')
      import :: c_ptr
      type(c_ptr), value :: evgrp
    end subroutine my_deallocateeventgroup
    !
    function my_addeventtoeventgroup(my_event, my_eventgroup) result(ret) bind(c, name='addNewEventToEventGroup')
      import :: c_bool, c_ptr
      logical(c_bool) :: ret
      type(c_ptr), value :: my_event
      type(c_ptr), value :: my_eventgroup
    end function my_addeventtoeventgroup
    !
    function my_removeeventfromeventgroup(evname, evgrp) result(ret) bind(c, name='removeEventFromEventGroup')
      import :: c_bool, c_char, c_ptr
      logical(c_bool) :: ret
      character(c_char), dimension(*) :: evname
      type(c_ptr), value :: evgrp
    end function my_removeeventfromeventgroup
    !
    function my_geteventgroupname(my_eventgroup, string) result(string_ptr) bind(c, name='getEventGroupName')
      import :: c_ptr, c_char
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: my_eventgroup
      character(c_char), dimension(*) :: string
    end function my_geteventgroupname
    !
  end interface
  !
  interface
    !
    function my_getRepetitions(repetitionString) bind(c, name='getRepetitions')
      import :: c_int, c_char
      integer(c_int) :: my_getRepetitions
      character(c_char), dimension(*) :: repetitionString
    end function my_getRepetitions
    !
    subroutine my_splitRepetitionString(recurringTimeInterval, repetitor, start, end, duration) &
         bind(c, name='splitRepetitionString')
      import :: c_char
      character(c_char), dimension(*) :: recurringTimeInterval
      character(c_char), dimension(*) :: repetitor
      character(c_char), dimension(*) :: start
      character(c_char), dimension(*) :: end
      character(c_char), dimension(*) :: duration
    end subroutine my_splitRepetitionString
    !
  end interface
  !


  interface handle_errno
    module procedure handle_errno_base
    module procedure handle_errno_cond
  end interface handle_errno


contains

  !___________________________________________________________________________
  ! auxiliary routine: handle error code.
  subroutine handle_errno_base(errno, routine_str, lineno)
    integer, intent(IN) :: errno
    integer, intent(IN) :: lineno
    character(LEN=*), intent(IN) :: routine_str
    character(len=max_mtime_error_str_len)     :: error_str
    if (errno /= no_error) then
      call mtime_strerror(errno, error_str)
      write (error_str,'(a,a,i0)') trim(error_str), " :: line ", lineno
      call finish_mtime(routine_str, error_str)
    end if
  end subroutine handle_errno_base


  !___________________________________________________________________________
  ! auxiliary routine: handle error code.
  subroutine handle_errno_cond(lcond, errno, routine_str, lineno)
    logical, intent(IN) :: lcond
    integer, intent(IN) :: errno
    integer, intent(IN) :: lineno

    character(LEN=*), intent(IN) :: routine_str
    character(len=max_mtime_error_str_len)     :: error_str
    if (lcond)  call handle_errno_base(errno, routine_str, lineno)
  end subroutine handle_errno_cond


end module mtime_c_bindings
